cluster-talos/kubernetes/apps/tracearr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracearr
  labels:
    k10.kasten.io/backup: "true"
    storage-class: vsphere
